styles.css
/* ... */
.title {
	font-size: clamp(3.2rem, 3vw, 6rem);
}

.info {
	max-width: 500px;
	font-size: 1.35rem;
	padding-block-start: 1.3rem;
	color: var(--other-clr);
}

.btn {
	padding: 0.8rem 3rem;
	margin-block-start: 2rem;
	color: var(--main-clr);
	border-radius: 0.2rem;
	cursor: pointer;
}

.btn:active {
	transform: scale(0.98);
}

.hover-effect::after {
	position: absolute;
	content: '';
	left: 0;
	bottom: -2px;
	width: 100%;
	height: 1.5px;
	background: var(--accent-clr);

	transform: scaleX(0);
	transform-origin: left;
	transition: all 300ms ease-in-out;
}

.hover-effect:hover::after {
	transform-origin: right;
	transform: scaleX(1);
}

small {
	color: var(--other-clr);
}

/* link to skip to content for accesibility (keyboard users) */
.skip-to-content {
	position: absolute;
	background: var(--accent-clr);
	color: var(--secondary-clr);
	padding: 0.75rem 1rem;
	left: 1.5rem;
	top: 0;
	border-radius: 0 0 0.5rem 0.5rem;
	font-size: 1.4rem;
	transform: translateY(-200%);
	transition: all 350ms ease-in;
}

.skip-to-content:focus {
	transform: translateY(0);
}

/*******************
		HEADER
*************************/
.nav {
	width: 100%;
	padding: 0 1rem;
}

.nav .container {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 0.85rem 2rem;
	background: var(--secondary-clr);
	margin-block-start: 1.15rem;
	border-radius: 0.5rem;
	font-size: 1.4rem;
}

.nav-logo h3 {
	font-weight: 800;
}

.logo {
	width: 40px;
	height: 40px;
	border-radius: 50%;
}

.hamburger {
	display: none;
}

.nav-list {
	display: flex;
	align-items: center;
	gap: 5rem;
}

.nav-links {
	position: relative;
	transition: var(--transition-clr);
}

.nav-links:hover {
	color: var(--accent-clr);
}

.social-nav {
	display: flex;
	align-items: center;
	gap: 2.5rem;
}

.social-nav a {
	line-height: 0;
	width: 33px;
	height: 33px;
	border-radius: 50%;
	background: transparent;
	display: flex;
	align-items: center;
	justify-content: center;
	transition: all 300ms cubic-bezier(0.25, 0.32, 0.85, 0.58);
}

.social-nav a:hover {
	background: var(--accent-other-clr);
	color: var(--secondary-clr);
}

/*******************
		HERO SECTION
*************************/
.hero {
	padding: 0 1rem;
}

.hero .container {
	margin-block-start: var(--section-mt);
	display: grid;
	place-items: center;
	gap: 5rem;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.hero-intro {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.name {
	font-size: clamp(4rem, 5vw, 6rem);
}

.intro {
	color: var(--other-clr);
}

.hero img {
	max-width: 100%;
	width: 100%;
}

.hero .code {
	filter: drop-shadow(0 0 0.75rem var(--secondary-clr));
}

.hero-btn-container {
	margin-block-start: 5rem;
	display: flex;
}

.hire-btn {
	text-transform: uppercase;
	letter-spacing: 1px;
	display: inline-block;
	border: 1px solid var(--accent-clr);
	color: var(--accent-clr);
	transition: all 300ms cubic-bezier(0.25, 0.32, 0.85, 0.58);
	z-index: 1;
	position: relative;
	font-size: inherit;
	overflow: hidden;
}

.hire-btn::before {
	content: '';
	z-index: -1;
	position: absolute;
	top: 100%;
	right: 100%;
	width: 2rem;
	height: 1em;
	border-radius: 50%;
	background-color: var(--accent-clr);
	transform-origin: center;
	transform: translate3d(50%, -50%, 0) scale3d(0, 0, 0);
	transition: transform 0.45s ease-in-out;
}

.hire-btn:hover {
	cursor: pointer;
	color: hsl(0, 0%, 9%);
	border: 0;
}

.hire-btn:hover::before {
	transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
}

.download-link {
	color: var(--other-clr);
	transition: color 0.45s ease-in-out;
}

.download-link:hover {
	color: #fff;
}

.download-link:focus {
	outline: none;
}

@media (max-width: 768px) {
	.hero .code {
		display: none;
	}
}

/*******************
		ABOUT SECTION
*************************/
.about-me {
    margin-block-start: var(--section-mt);
    background: transparent;
    padding: var(--section-mt) 1rem;
}

.about-me .container {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
	place-items: center;
	gap: 15rem;
	position: relative;
}

.about-me img {
	align-self: end;
	justify-self: end;
	width: 425px;
	max-width: 100%;
	box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.006),
		0px 0px 5.3px rgba(0, 0, 0, 0.008), 0px 0px 10px rgba(0, 0, 0, 0.01),
		0px 0px 17.9px rgba(0, 0, 0, 0.012), 0px 0px 33.4px rgba(0, 0, 0, 0.014),
		0px 0px 80px rgba(0, 0, 0, 0.02);
}

.about {
	padding-block-start: 1.25rem;
}

.about p {
	padding-block-start: 2rem;
	line-height: 1.8;
}
.download-resume {
    text-transform: uppercase;
    letter-spacing: 1px;
    display: inline-block;
    border: 1px solid var(--accent-clr);
    color: var(--accent-clr);
    transition: all 300ms cubic-bezier(0.25, 0.32, 0.85, 0.58);
    z-index: 1;
    position: relative;
    font-size: 0.90rem;
    overflow: hidden;
    padding: 9px 19px;
    text-decoration: none;
    border-radius: 4px;
    background: transparent;
}

.download-resume::before {
    content: '';
    z-index: -1;
    position: absolute;
    top: 100%;
    right: 100%;
    width: 2rem;
    height: 1em;
    border-radius: 50%;
    background-color: var(--accent-clr);
    transform-origin: center;
    transform: translate3d(50%, -50%, 0) scale3d(0, 0, 0);
    transition: transform 0.45s ease-in-out;
}

.download-resume:hover {
    cursor: pointer;
    color: hsl(0, 0%, 9%);
    border: none;
}

.download-resume:hover::before {
    transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
}


/*******************
		PROJECTS SECTION
*************************/
.projects-section {
	margin-block-start: var(--section-mt);
	padding: 4rem 1rem;
}

.projects {
	padding-block-start: 5rem;
	display: flex;
	flex-direction: column;
	gap: 12rem;
}

.project {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
	place-items: center;
	gap: 5rem;
}

.project-img {
	transition: opactiy 300ms ease-in-out;
	position: relative;
	display: inline-block;
	height: 100%;
}
/* ... */

